k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pulseboard-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pulseboard-api
  template:
    metadata:
      labels:
        app: pulseboard-api
    spec:
      containers:
        - name: pulseboard-api
          image: pulseboard-api:1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
