k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pulseboard-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pulseboard-db
  template:
    metadata:
      labels:
        app: pulseboard-db
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: pulseboard-db-pvc
