k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pulseboard-api
spec:
  type: NodePort
  selector:
    app: pulseboard-api
  ports:
    - port: 8000
      targetPort: 8000
