k8s/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pulseboard-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: pulseboard.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pulseboard-api
                port:
                  number: 8000
